# data-catalog-labs

./: .gitignore  README.md
airbyte/: README.md
airflow/: README.md  compose.celery.yaml  compose.local.yaml  pyproject.toml
airflow/dags/: hackernews_rss_bigquery.py
airflow/plugins/: datahub_dagrun_listener.py
datahub/: Dockerfile  README.md  compose.yaml  pyproject.toml
datahub-connectors/airbyte/: Dockerfile  README.md  pipeline.yaml  pyproject.toml  recipe.yml
datahub-connectors/airbyte/airbyte_datahub/: cli.py  config.py  emitter.py
datahub-connectors/airbyte/connectors/: __init__.py  airbyte_source.py
datahub-connectors/airbyte/datahub_airbyte/: airbyte_client.py  config.py  source.py
datahub-connectors/airbyte/notebooks/: airbyte_connection_explorer.ipynb  datahub_emitter.ipynb  pipeline.yaml
datahub-connectors/airbyte/recipes/: airbyte.yml
datahub/connectors/: airbyte_source.py
datahub/docs/: source-discovery.md
datahub/recipes/: airbyte.yml  bigquery.yaml  bigquery.yml  dbt_openlineage.yaml
dbt/: Dockerfile  README.md  dbt_datahub.yml  dbt_project.yml  openlineage.yml  pyproject.toml
dbt/models/core/: dim_articles.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_hot_articles.sql  stg_newest_articles.sql
spark/: README.md  pyproject.toml
spark/notebooks/: pyspark_bigquery_hackernews.ipynb  pyspark_datahub_acryl-spark.ipynb  pyspark_datahub_openlineage.ipynb  spark-4.0_acryl-spark.ipynb
spark/spark-3.x/: README.md  compose.spark-3.5-standalone.yaml  compose.yaml  pyproject.toml
spark/spark-3.x/notebooks/: spark-3.5_acryl-spark.ipynb  spark-3.5_openlineage-spark.ipynb
spark/spark-4.x/: README.md  compose.spark-4.0-standalone.yaml  pyproject.toml
spark/spark-4.x/notebooks/: spark-4.0_acryl-spark.ipynb  spark-4.0_openlineage-spark.ipynb
terraform/: main.tf  providers.tf  terraform.tfvars.example  variables.tf
