[project]
name = "datahub-ingest"
version = "1.0"
description = "DataHub custom recipe ingest pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "acryl-datahub[bigquery,datahub-kafka]>=1.3.1,<2.0",
    "requests>=2.31.0",
]

[project.entry-points."datahub.ingestion.source.plugins"]
airbyte = "connectors.airbyte_source:AirbyteSource"

[tool.setuptools]
# Only include connectors as a package, exclude recipes (YAML files)
packages = ["connectors"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = false
preview = true  # unstable: enables 'hug_parens_with_braces_and_square_brackets' for compact StructType([...])

[tool.ruff.lint]
preview = true  # unstable: enables latest lint rules before stabilization
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax for newer Python)
    "B",    # flake8-bugbear (common bug patterns)
    "SIM",  # flake8-simplify (code simplification)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF013",  # implicit Optional
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]  # allow imports not at top in notebooks
