[project]
name = "dbt-bigquery-analytics"
version = "1.0"
description = "Analytics engineering with dbt and BigQuery"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "dbt-core>=1.11.2,<2.0",
    "dbt-bigquery>=1.11.0,<2.0",
    "openlineage-dbt>=1.43.0,<2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
