[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datahub-airbyte-connector"
version = "1.0"
description = "Register Airbyte connections as DataJob entities in DataHub"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "acryl-datahub>=1.3.1,<2.0",
    "airbyte-api>=0.53.0,<1.0",
    "pyyaml>=6.0,<7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "jupyterlab>=4.5.3",
]

[tool.hatch.build.targets.wheel]
packages = ["datahub_airbyte"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = false
preview = true  # unstable: enables 'hug_parens_with_braces_and_square_brackets' for compact StructType([...])

[tool.ruff.lint]
preview = true  # unstable: enables latest lint rules before stabilization
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax for newer Python)
    "B",    # flake8-bugbear (common bug patterns)
    "SIM",  # flake8-simplify (code simplification)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF013",  # implicit Optional
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
